--- a/contacts.html
+++ b/contacts.html
@@ -75,29 +75,26 @@
 <!--=====================
           Content
 ======================-->
-<section id="content"><div class="ic">More Website Templates @ TemplateMonster.com - July 14, 2014!</div>
+<section id="content">
   <div class="container">
     <div class="row">
       <div class="grid_12">
         <h4>Find Us</h4>
         <div class="map">
           <figure class="">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d24214.807650104907!2d-73.94846048422478!3d40.65521573400813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1395650655094" style="border:0"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3499.836370440308!2d77.48732831508396!3d28.694540982393455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0!2zMjjCsDQxJzQwLjQiTiA3N8KwMjknMjIuMyJF!5e0!3m2!1sen!2sin!4v1547971901304" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
           </figure>
         </div>
       </div>
       <div class="clear"></div>
       <div class="grid_5">
         <h4>Contact Info</h4>
-        <p class="text1 offset__1">Lorem ipsum dolor sit amet, consecteturpiscinger elit um dolor sit amet, consecteturpiscing.</p>
-        <p>All <a href="http://www.templatemonster.com/" class="color1" rel="nofollow">premium templates</a> go with 24/7 support. </p>
-        <p>If you need help in customization of freebies, ask guys from <a href="http://www.templatetuning.com/" class="color1" rel="nofollow">TemplateTuning</a>.</p>
-        The Company Name Inc. <br>
-        9870 St Vincent Place,<br>
-        Glasgow, DC 45 Fr 45.<br>
-        Telephone: +1 800 603 6035<br>
-        FAX: +1 800 889 9898<br>
-        E-mail: <a href="#">mail@demolink.org</a>
+        A&S Events <br>
+        G22, Block - C,<br>
+        Gaur Homes, Govindpuram<br>
+        Ghaziabad, UP - 201013.<br>
+        Telephone: +91 800 603 6035<br>
+        E-mail: <a href="mailto:contact@aseventplanner.com?Subject=Hello" target="_top"">contact@aseventplanner.com</a>
       </div>
       <div class="grid_6 preffix_1">
         <h4>Contact Form</h4>
@@ -159,7 +156,7 @@
       <div class="grid_12"> 
         <div class="copyright"><a href="#" class="f_logo"><img src="images/f_logo.png" alt=""></a> &copy; <span id="copyright-year"></span> | <a href="#">Privacy Policy</a>
           <div class="sub_copyright">
-            Website designed by <a href="http://www.templatemonster.com/" rel="nofollow">TemplateMonster.com</a>
+            Website designed by <a href="https://www.facebook.com/akansha.gupta.104203" rel="nofollow" target="_blank">Akansha Gupta</a>
           </div>
         </div>
       </div>
