--- a/gallery.html
+++ b/gallery.html
@@ -54,7 +54,7 @@
         <div class="socials">
           <a href="#" class="fa fa-twitter"></a>
           <a href="#" class="fa fa-facebook"></a>
-          <a href="#" class="fa fa-google-plus"></a>
+          <a href="#" class="fa fa-instagram" aria-hidden="true"></a>
         </div>
         <div class="navigation ">
           <nav>
@@ -75,55 +75,43 @@
 <!--=====================
           Content
 ======================-->
-<section id="content" class="gallery1"><div class="ic">More Website Templates @ TemplateMonster.com - July 14, 2014!</div>
+<section id="content" class="gallery1">
   <div class="container">
+    <h4>Our Work Photos</h4>
+    <hr>
+    <br>
     <div class="row">
       <div class="grid_4">
         <div class="block2">
-          <div class="maxheight"><a href="#" class="text1">Mervamus at magna non nunc tristique fer
-</a><a href="images/big1.jpg" class="gall_item"><img src="images/page4_img1.jpg" alt=""></a></div>
+          <div class="maxheight"><a href="images/big1.jpeg" class="gall_item"><img src="images/page4_img1.jpeg" alt=""></a></div>
         </div>
       </div>
       <div class="grid_4">
         <div class="block2">
-          <div class="maxheight"><a href="#" class="text1">Furabitur vel lorem sit amet lamcorperermentum </a><a href="images/big2.jpg" class="gall_item"><img src="images/page4_img2.jpg" alt=""></a></div>
+          <div class="maxheight"><a href="images/big2.jpeg" class="gall_item"><img src="images/page4_img2.jpeg" alt=""></a></div>
         </div>
       </div>
       <div class="grid_4">
         <div class="block2">
-          <div class="maxheight"><a href="#" class="text1">Kur vel lorem sit amet lamcorperermentum vitae </a><a href="images/big3.jpg" class="gall_item"><img src="images/page4_img3.jpg" alt=""></a></div>
+          <div class="maxheight"><a href="images/big3.jpeg" class="gall_item"><img src="images/page4_img3.jpeg" alt=""></a></div>
         </div>
       </div>
       <div class="grid_4">
         <div class="block2">
-          <div class="maxheight"><a href="#" class="text1">Tervamus at magna non nunc tristique fero</a><a href="images/big4.jpg" class="gall_item"><img src="images/page4_img4.jpg" alt=""></a></div>
+          <div class="maxheight"><a href="images/big4.jpeg" class="gall_item"><img src="images/page4_img4.jpeg" alt=""></a></div>
         </div>
       </div>
       <div class="grid_4">
         <div class="block2">
-          <div class="maxheight"><a href="#" class="text1">Kurabitur vel lorem sit amet lamcorperermentum </a><a href="images/big5.jpg" class="gall_item"><img src="images/page4_img5.jpg" alt=""></a></div>
+          <div class="maxheight"><a href="images/big5.jpeg" class="gall_item"><img src="images/page4_img5.jpeg" alt=""></a></div>
         </div>
       </div>
       <div class="grid_4">
         <div class="block2">
-          <div class="maxheight"><a href="#" class="text1">Vel lorem sit amet lamcorperermentum vitae rius </a><a href="images/big6.jpg" class="gall_item"><img src="images/page4_img6.jpg" alt=""></a></div>
+          <div class="maxheight"><a href="images/big6.jpeg" class="gall_item"><img src="images/page4_img6.jpeg" alt=""></a></div>
         </div>
       </div>
-      <div class="grid_4">
-        <div class="block2">
-          <div class="maxheight"><a href="#" class="text1">Nervamus at magna non nunc tristique feri</a><a href="images/big7.jpg" class="gall_item"><img src="images/page4_img7.jpg" alt=""></a></div>
-        </div>
-      </div>
-      <div class="grid_4">
-        <div class="block2">
-          <div class="maxheight"><a href="#" class="text1">Furabitur vel lorem sit amet lamcorper ermentumo </a><a href="images/big8.jpg" class="gall_item"><img src="images/page4_img8.jpg" alt=""></a></div>
-        </div>
-      </div>
-      <div class="grid_4">
-        <div class="block2">
-          <div class="maxheight"><a href="#" class="text1">Kur vel lorem sit amet lamcorperermentum vitae </a><a href="images/big9.jpg" class="gall_item"><img src="images/page4_img9.jpg" alt=""></a></div>
-        </div>
-      </div>
+    
     </div>
   </div>
 </section>
@@ -137,7 +125,7 @@
       <div class="grid_12"> 
         <div class="copyright"><a href="#" class="f_logo"><img src="images/f_logo.png" alt=""></a> &copy; <span id="copyright-year"></span> | <a href="#">Privacy Policy</a>
           <div class="sub_copyright">
-            Website designed by <a href="http://www.templatemonster.com/" rel="nofollow">TemplateMonster.com</a>
+            Website designed by <a href="https://www.facebook.com/akansha.gupta.104203" rel="nofollow" target="_blank">Akansha Gupta</a>
           </div>
         </div>
       </div>
