--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
         <div class="socials">
           <a href="#" class="fa fa-twitter"></a>
           <a href="#" class="fa fa-facebook"></a>
-          <a href="#" class="fa fa-google-plus"></a>
+          <a href="#" class="fa fa-instagram"></a>
         </div>
         <div class="navigation ">
           <nav>
@@ -80,16 +80,17 @@
         <h4>About Our Agency</h4>
         <div class="row">
           <div class="grid_8">
-            <img src="images/page2_img.jpg" alt="" class="img_inner fleft">
+            <img src="images/page2_img.jpeg" alt="" class="img_inner fleft">
             <div class="extra_wrapper">
-              <p class="text1 offset__1">Mervamus at magna non nunc tristique rhoncus. Aliquam nibh ante, egestas id dictum a,ommodo luctus liberoret. Praesent faucibus malesuada faucibus. </p>
+              <!--<p class="text1 offset__1">Mervamus at magna non nunc tristique rhoncus. Aliquam nibh ante, egestas id dictum a,ommodo luctus liberoret. Praesent faucibus malesuada faucibus. </p>
               <p>Curabitur vel lorem sit amet nullullamcorperermentum. In vitae varius augue, eu consectetur ligula. Etiam dui eros, consectetur laoreet site amet est vel, commodo venenatis eros. </p>
-              Fusce adipiscing quam id risus sagittis, non nsequaterto lacus interdum. Proin ut tinciduntl nulla, eu sodales 
+              Fusce adipiscing quam id risus sagittis, non nsequaterto lacus interdum. Proin ut tinciduntl nulla, eu sodales -->
             </div>
             <div class="clear"></div>
           </div>
         </div>
-        <h4 class="head__1">Our Work Team</h4>
+        <!--
+        <h4 class="head__1"></h4>
         <div class="row">
           <div class="grid_3">
             <div class="block2">
@@ -120,36 +121,36 @@
           </div>
         </div>
       </div>
-      <div class="grid_3">
+      <div class="grid_3">-->
         <h4>Who We Are</h4>
         <ul class="list">
           <li>
             <div class="count">1</div>
             <div class="extra_wrapper">
-            <p class="text1 offset__1"><a href="#">Demus at magna non nunc tristique ncuseri tym nibh </a></p>
-            Icommodo re luctus libero reto. Praesenterto lom cibusertulomi malesuada cibuste. </div>
+            <p class="text1 offset__1"><a href="#">A&S Events is an event managing company. We have experience helping our clients put on some pretty memorable events like Corporate Events,Birthdays Events,Weddings,Wedding Anniversaries,FamilyEvents,Personal Events and many more.  </a></p></div>
           </li>
           <li>
             <div class="count">2</div>
             <div class="extra_wrapper">
-            <p class="text1 offset__1"><a href="#">Femus at magna non nunc tristique ncuseri tym. </a></p>
-            Ecommodo re luctus libero. Praesenterto lom ibusertulomi malesuada cibusteec laoreet </div>
+            <p class="text1 offset__1"><a href="#">
+              A&S Events is a leading Event Management Company with end to end solution in corporate events.The art of gathering.The Leading Provider of Event Management.Achieve A New Level Of Event Success With All-In-One A&S Event Management <br/>INCREASE attendees<br/>SAVE cost while finding the perfect venue<br/>MANAGE events easily </a></p>
+             </div>
           </li>
-          <li>
+          <!--<li>
             <div class="count">3</div>
             <div class="extra_wrapper">
             <p class="text1 offset__1"><a href="#">Lemus at magna non nunc tristique ncuseri tyiquam  </a></p>
             Ocommodo re luctus libero. Praesenterto lom ucibusertulomi malesuada cibusteec laoreet </div>
-          </li>
+          </li>-->
         </ul>
         <h4>Our Capabilities</h4>
         <ul class="list1">
-          <li><a href="#">Vivamus at magna non nunc tristique </a></li>
-          <li><a href="#">Aliquam nibh ante, egestas id</a></li>
-          <li><a href="#">Ommodo luctus libero</a></li>
-          <li><a href="#">Faucibus malesuada faucibus. Donec </a></li>
-          <li><a href="#">Laoreet metus id laoreet</a></li>
-          <li><a href="#">Jalesuadaorem ipsum dolor sit ame</a></li>
+          <li><a href="#">Corporate Events </a></li>
+          <li><a href="#">Birthdays Events </a></li>
+          <li><a href="#">Weddings</a></li>
+          <li><a href="#">Wedding Anniversaries </a></li>
+          <li><a href="#">FamilyEvents</a></li>
+          <li><a href="#">Personal Events</a></li>
         </ul>
       </div>
     </div>
@@ -165,7 +166,7 @@
       <div class="grid_12"> 
         <div class="copyright"><a href="#" class="f_logo"><img src="images/f_logo.png" alt=""></a> &copy; <span id="copyright-year"></span> | <a href="#">Privacy Policy</a>
           <div class="sub_copyright">
-            Website designed by <a href="http://www.templatemonster.com/" rel="nofollow">TemplateMonster.com</a>
+            Website designed by <a href="https://www.facebook.com/akansha.gupta.104203" rel="nofollow" target="_blank">Akansha Gupta</a>
           </div>
         </div>
       </div>
