--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="socials">
           <a href="#" class="fa fa-twitter"></a>
           <a href="#" class="fa fa-facebook"></a>
-          <a href="#" class="fa fa-google-plus"></a>
+          <a href="#" class="fa fa-instagram"></a>
         </div>
         <div class="navigation ">
           <nav>
@@ -79,11 +79,12 @@
       </div>
     </div>
   </div>
+  
 </header>
 <!--=====================
           Content
 ======================-->
-<section id="content"><div class="ic">More Website Templates @ TemplateMonster.com - July 14, 2014!</div>
+<section id="content"><div class="ic"></div>
   <div class="container">
     <div class="row">
       <div class="page1_block">
@@ -92,22 +93,15 @@
         </div>
         <div class="grid_6">
           <h2>Best Ideas for <br> Your Parties</h2>
-          <div class="row">
-            <div class="grid_3">
-              <img src="images/page1_img2.jpg" alt="">
-            </div>
-            <div class="grid_3">
-              <img src="images/page1_img3.jpg" alt="">
-            </div>
-          </div>
+          
         </div>
       </div>
       <div class="clear"></div>
       <div class="grid_10 preffix_1">
         <div class="block1">
           <div class="block1_title">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mollis erat mattis neque facilisis, sit amet ultricies erat rutrumas facilisis, nulla vel viverra 
-            <span>Auctor, leo magna sodales felis, quis malesuada nibh odio ut velit</span>
+            A&S Events is an event managing company. We have experience in helping our clients put on some pretty memorable events like Corporate Events,Birthdays Events,Weddings,Wedding Anniversaries,FamilyEvents,Personal Events and many more.
+            <span>"Your's happiness Our guarantee"</span>
           </div>
           <a href="#" class="btn">View Portfolio</a>
         </div>
@@ -145,14 +139,7 @@
         </div>
         <div class="grid_12">
           <h3>Welcome</h3>
-          <img src="images/page1_img7.jpg" alt="" class="img_inner fleft">
-          <div class="extra_wrapper">
-            <p class="text1">Follow the link to find information about this <a href="http://blog.templatemonster.com/free-website-templates/" class="color1"  rel="nofollow">freebie</a>. </p>
-            <p class="text1 offset__1">Want more <a href="http://www.templatemonster.com/category/event-planner-wordpress-themes/" rel="nofollow" class="color1">goodies</a> of this kind? Visit TemplateMonster.com</p>
-            Curabitur vel lorem sit amet nulla ullamcorper fermentum. In vitae varius augue, eu consectetur ligula. Etiam dui eros, laoreet site amet est vel, commodo venenatis eros. Fusce adipiscing quam id risus sagittis, non consequat lacus interdum. Proin ut tinciduntl nulla, eu sodales arcu. Quisque viverra nulla nunc, eu ultrices libero ultricies eget. Phasellus accumsan justo vitae feugiat  placer. Praesent vel ultrices velit. Suspendisse risus justo, lacinia vitae eleifend sed, cursus sit amet massa. <br> <a href="#" class="link1">More</a>
-          </div>
-        </div>
-      </div>
+         
     </div>
   </div>  
   <div class="container gallery">
@@ -199,15 +186,16 @@
         <blockquote class="bq1">
           <img src="images/page1_img12.jpg" alt="">
           <div class="extra_wrapper">
-            <p>“Curabitur vel lorem sit amet nulla erero fermentum. In vitae varius auguectetu ligula. Etiam dui eros, laoreet site am est vel commodo venenatisipiscing... ”</p>
-            <div class="color2">- Eva Smith, Client</div>
+            <p>“Best work in the world ever experienced ”</p>
+            <div class="color2">- Shweta Garg, Client</div>
           </div>
         </blockquote>
         <blockquote class="bq1">
           <img src="images/page1_img13.jpg" alt="">
           <div class="extra_wrapper">
-            <p>“Hurabitur vel lorem sit amet nulla erero fermentum. In vitae varius auguectetu ligula. Etiam dui eros, laoreet site am est vel commodo venenatisipgolo... ”</p>
-            <div class="color2">- Mike Brown, Client</div>
+            <p>"best team work and very devoted
+              ”</p>
+            <div class="color2">-Rajesh Sharma, Client</div>
           </div>
         </blockquote>
       </div>
@@ -224,7 +212,7 @@
       <div class="grid_12"> 
         <div class="copyright"><a href="#" class="f_logo"><img src="images/f_logo.png" alt=""></a> &copy; <span id="copyright-year"></span> | <a href="#">Privacy Policy</a>
           <div class="sub_copyright">
-            Website designed by <a href="http://www.templatemonster.com/" rel="nofollow">TemplateMonster.com</a>
+            Website designed by <a href="https://www.facebook.com/akansha.gupta.104203" rel="nofollow" target="_blank">Akansha Gupta</a>
           </div>
         </div>
       </div>
