--- a/contacts.html
+++ b/contacts.html
@@ -54,7 +54,7 @@
         <div class="socials">
           <a href="#" class="fa fa-twitter"></a>
           <a href="#" class="fa fa-facebook"></a>
-          <a href="#" class="fa fa-google-plus"></a>
+          <a href="#" class="fa fa-instagram"></a>
         </div>
         <div class="navigation ">
           <nav>
