--- a/contacts.html
+++ b/contacts.html
@@ -93,8 +93,8 @@
         G22, Block - C,<br>
         Gaur Homes, Govindpuram<br>
         Ghaziabad, UP - 201013.<br>
-        Telephone: +91 800 603 6035<br>
-        E-mail: <a href="mailto:contact@aseventplanner.com?Subject=Hello" target="_top"">contact@aseventplanner.com</a>
+        Telephone: +91 7060384880<br>
+        E-mail: contact@aseventplanner.com
       </div>
       <div class="grid_6 preffix_1">
         <h4>Contact Form</h4>
