--- a/index.html
+++ b/index.html
@@ -100,21 +100,21 @@
       <div class="grid_10 preffix_1">
         <div class="block1">
           <div class="block1_title">
-            A&S Events is an event managing company. We have experience in helping our clients put on some pretty memorable events like Corporate Events,Birthdays Events,Weddings,Wedding Anniversaries,FamilyEvents,Personal Events and many more.
-            <span>"Your's happiness Our guarantee"</span>
+            A&S Events is an event managing company. We have experience in helping our clients put on some pretty memorable events like corporate events, birthdays events, weddings, wedding Anniversaries, family events, personal events and many more.
+            <span>"Your happiness, Our guarantee"</span>
           </div>
-          <a href="#" class="btn">View Portfolio</a>
+          <a href="#port" class="btn">View Portfolio</a>
         </div>
       </div>
       
     </div>
   </div>
-  <div class="shuffle-group">
+  <div id="port" class="shuffle-group">
     <div class="container">
       <div class="row">
         <div class="grid_8">
            <div data-si-mousemove-trigger="100" class="shuffle-me">
-            <a href="#" class="info"><div class="shuffle_title">Birthday Parties <span>More</span></div></a>
+            <a href="#" class="info"><div class="shuffle_title">Birthday Parties </div></a>
             <div class="images">
               <img src="images/page1_img4.jpg" alt="">
               <img src="images/shuffle_1.jpg" alt="">
@@ -123,23 +123,21 @@
         </div>
         <div class="grid_4">
            <div data-si-mousemove-trigger="100" class="shuffle-me shuff__1">
-            <a href="#" class="info"><div class="shuffle_title">Wedding Planning <span>More</span></div></a>
+            <a href="#" class="info"><div class="shuffle_title">Wedding Planning</div></a>
             <div class="images">
               <img src="images/page1_img5.jpg" alt="">
               <img src="images/shuffle_3.jpg" alt="">
               <img src="images/shuffle_4.jpg" alt="">
             </div></div>
              <div data-si-mousemove-trigger="100" class="shuffle-me shuff__1">
-            <a href="#" class="info"><div class="shuffle_title">Corporate Event <span>More</span></div></a>
+            <a href="#" class="info"><div class="shuffle_title">Corporate Event</div></a>
             <div class="images">
               <img src="images/page1_img6.jpg" alt="">
               <img src="images/shuffle_5.jpg" alt="">
               <img src="images/shuffle_6.jpg" alt="">
             </div></div>
         </div>
-        <div class="grid_12">
-          <h3>Welcome</h3>
-         
+        <div class="grid_12">       
     </div>
   </div>  
   <div class="container gallery">
@@ -186,16 +184,15 @@
         <blockquote class="bq1">
           <img src="images/page1_img12.jpg" alt="">
           <div class="extra_wrapper">
-            <p>“Best work in the world ever experienced ”</p>
-            <div class="color2">- Shweta Garg, Client</div>
+            <p>“Thank You A&S, our last event was very sucessful, the event was perfectly decorated annd well organized, thanks  for providing theme as we requested.”</p>
+            <div class="color2">- Pulkit Garg, Client</div>
           </div>
         </blockquote>
         <blockquote class="bq1">
           <img src="images/page1_img13.jpg" alt="">
           <div class="extra_wrapper">
-            <p>"best team work and very devoted
-              ”</p>
-            <div class="color2">-Rajesh Sharma, Client</div>
+            <p>"When we first met, I never thought this company would become a part for my corporate, a&s event planners worked their best for my each event. Now, I am full time client for you guys."</p>
+            <div class="color2">- Rajesh Sharma, Client</div>
           </div>
         </blockquote>
       </div>
