--- a/services.html
+++ b/services.html
@@ -73,7 +73,7 @@
 <!--=====================
           Content
 ======================-->
-<section id="content"><div class="ic">.com - July 14, 2018!</div>
+<section id="content">
   <div class="container">
     <div class="row">
       <div class="grid_12">
@@ -84,7 +84,7 @@
           <div class="maxheight">
             <img src="images/page3_img1.jpg" alt="">
             <div class="box_bot">
-              <p class="text1 offset__1"><a href="#"><u><b>Corporate & Finance Services:-</b></u> </a></p>Navigate every aspect of your event planning as simply and efficiently as possible with A&S event management software.We will take the stress off of you by managing the infinite number of decisions that go along with any corporate event. By managering the theme, location, marketing, entertainment and catering for the event.Event management services can include virtually every detail of the event to your specifications and budget.A&S Events eill make your event more successful.
+              <p class="text1 offset__1"><u><b>Corporate & Finance Services:-</b></u></p>Navigate every aspect of your event planning as simply and efficiently as possible with A&S event management. We will take the stress off of you by managing the infinite number of decisions that go along with any corporate event. By managing the theme, location, marketing, entertainment and catering for the event. Event management services can include virtually every detail of the event to your specifications and budget. A&S Events will make your event more successful.
               <br>
             </div>
           </div>
@@ -95,7 +95,7 @@
           <div class="maxheight">
             <img src="images/page3_img2.jpg" alt="">
             <div class="box_bot">
-              <p class="text1 offset__1"><a href="#"><u><b>Meeting Planner:-</u></b> </a></p>Become more efficient and grow your business by automating event planning process to quickly plan simple or complex events on behalf of your clients or for your friends and family So that you can enjoy there company to the most.
+              <p class="text1 offset__1"><u><b>Meeting Planner:-</u></b></p>Become more efficient and grow your business by automating event planning process to quickly plan simple or complex events on behalf of your clients or for your friends and family So that you can enjoy there company to the most.
               <br>
               
             </div>
